--- a/public/src/js/bizWidgets/cz/cz.html
+++ b/public/src/js/bizWidgets/cz/cz.html
@@ -5,6 +5,9 @@
 	</div>
 	<p class="h h2">选择充值方式</p>
 	<div class="input-content">
-		fewfewfw
+		<div class="pay-method">
+			<i class="alipay active"></i>
+			<i class="wechat"></i>
+		</div>
 	</div>
 </div>
