--- a/public/src/js/widgets/popup/template.html
+++ b/public/src/js/widgets/popup/template.html
@@ -1,4 +1,4 @@
-<div class="popup-wrap <%= tsClass %> <%= appendClass %>">
+<div class="popup-wrap <%= tsClass %> <%= appendClass %> animated bounceOutDown">
 	<div class="title-bar clearfix2"><%= title %><i class="iconfont chainio-icon-delete_s x"></i></div>
 	<div class="content clearfix2">
 		<div class="scroll-content">
